[package]
name = "subup"
version = "0.1.0"
authors = ["Eric Huss <eric@huss.org>"]
license = "MIT"
repository = "https://github.com/ehuss/subup"
description = "Update rust submodules."
edition = "2018"

[dependencies]
clap = "2.32"
failure = "0.1"
dialoguer = "0.1"
isatty = "0.1"
termcolor = "0.3"
cargo_metadata = "0.5"
regex = "1.0"
lazy_static = "1.3"
