[package]
name = "subup"
version = "0.1.0"
authors = ["Eric Huss <eric@huss.org>"]
license = "MIT"
repository = "https://github.com/ehuss/subup"
description = "Update rust submodules."
edition = "2018"

[dependencies]
clap = "2.32"
anyhow = "1.0"
dialoguer = "0.5"
atty = "0.2"
termcolor = "1.0"
cargo_metadata = "0.9"
regex = "1.0"
lazy_static = "1.3"
